<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PageOneFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/dimen_35" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/dimen_30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/dimen_30" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/dimen_30" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:id="@+id/profile_title"
        android:textSize="@dimen/dimen_16sp"
        android:textColor="@color/purple"
        app:layout_constraintTop_toTopOf="@id/guideline_top"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintEnd_toEndOf="@id/guideline_right" />

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_50"
        android:layout_marginTop="@dimen/dimen_45"
        android:inputType="textCapSentences"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/name"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:padding="@dimen/dimen_15"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/profile_title" />

    <EditText
        android:id="@+id/age"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_50"
        android:layout_marginTop="@dimen/dimen_10"
        android:inputType="number"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/age"
        android:imeOptions="actionDone"
        android:padding="@dimen/dimen_15"
        android:singleLine="true"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <RadioGroup
        android:id="@+id/gender_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_15"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/age">

        <TextView
            android:id="@+id/gender_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_5"
            android:textSize="@dimen/dimen_16sp"
            android:text="@string/gender"
            android:textColor="@color/purple"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toTopOf="@id/gender_group" />

        <RadioButton
            android:id="@+id/male_rbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_5"
            android:textSize="@dimen/dimen_16sp"
            android:paddingStart="@dimen/dimen_10"
            android:layout_marginStart="@dimen/dimen_35"
            android:text="@string/male"
            android:textColor="@color/purple"
            app:layout_constraintStart_toEndOf="@id/gender_text"
            app:layout_constraintTop_toTopOf="@id/gender_group">
        </RadioButton>

        <RadioButton
            android:id="@+id/female_rbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_5"
            android:textSize="@dimen/dimen_16sp"
            android:paddingStart="@dimen/dimen_10"
            android:layout_marginStart="@dimen/dimen_35"
            android:text="@string/female"
            android:textColor="@color/purple"
            app:layout_constraintStart_toEndOf="@id/male_rbutton"
            app:layout_constraintTop_toTopOf="@id/gender_group">
        </RadioButton>
    </RadioGroup>


    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_50"
        android:layout_marginTop="@dimen/dimen_15"
        android:inputType="text"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/email_address"
        android:imeOptions="actionDone"
        android:padding="@dimen/dimen_15"
        android:singleLine="true"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/gender_group" />

    <EditText
        android:id="@+id/mobile_number"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_50"
        android:layout_marginTop="@dimen/dimen_15"
        android:inputType="phone"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/mobile_number"
        android:imeOptions="actionDone"
        android:padding="@dimen/dimen_15"
        android:singleLine="true"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/email" />

    <TextView
        android:id="@+id/dob"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_50"
        android:layout_marginTop="16dp"
        android:background="@drawable/outlined_text_view"
        android:clickable="false"
        android:drawableEnd="@drawable/ic__calendar_today_24"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/dob"
        android:padding="@dimen/dimen_15"
        android:singleLine="true"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/mobile_number" />

    <Spinner
        android:id="@+id/state"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_50"
        android:layout_marginTop="@dimen/dimen_15"
        android:inputType="textCapSentences"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/state"
        android:imeOptions="actionDone"
        android:padding="@dimen/dimen_15"
        android:singleLine="true"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/dob" />

    <Spinner
        android:id="@+id/district"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_50"
        android:layout_marginTop="@dimen/dimen_15"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/district"
        android:padding="@dimen/dimen_15"
        android:singleLine="true"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/state" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_15"
        android:background="@drawable/rounded_rectangle_button"
        android:padding="@dimen/dimen_15"
        android:paddingStart="@dimen/dimen_30"
        android:paddingEnd="@dimen/dimen_30"
        android:text="@string/next"
        android:layout_marginEnd="@dimen/dimen_5"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_16sp"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintTop_toBottomOf="@id/district" />

</androidx.constraintlayout.widget.ConstraintLayout>