<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfilePage3Fragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/dimen_35" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/dimen_30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/dimen_30" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/dimen_50" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:id="@+id/profile_title"
        android:textSize="@dimen/dimen_16sp"
        android:textColor="@color/purple"
        app:layout_constraintTop_toTopOf="@id/guideline_top"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintEnd_toEndOf="@id/guideline_right" />

    <TextView
        android:id="@+id/experience_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_15"
        android:background="@drawable/outlined_text_view"
        android:padding="@dimen/dimen_10"
        android:drawableStart="@drawable/ic_baseline_add_24"
        android:text="@string/experience"
        android:drawablePadding="@dimen/dimen_5"
        android:textColor="@color/purple"
        android:textSize="@dimen/dimen_14sp"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/profile_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dimen_15"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/experience_button"
        app:layout_constraintBottom_toTopOf="@id/previous_button"
        tools:listitem="@layout/experience_list_item" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/previous_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_15"
        android:layout_marginStart="@dimen/dimen_25"
        android:background="@drawable/rounded_rectangle_button"
        android:padding="@dimen/dimen_15"
        android:text="@string/previous"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintBottom_toTopOf="@id/guideline_bottom" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_15"
        android:layout_marginStart="@dimen/dimen_25"
        android:background="@drawable/rounded_rectangle_button"
        android:padding="@dimen/dimen_15"
        android:text="@string/submit"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintBottom_toTopOf="@id/guideline_bottom" />

</androidx.constraintlayout.widget.ConstraintLayout>